# mlops_project

./: .pre-commit-config.yaml  LICENSE  environment.yml  pyproject.toml
